# VisualBass

./: .gitignore  CMakeLists.txt  CmakeLists.txt  SliderControl.cpp  SliderControl.h  ToggleControl.cpp  ToggleControl.h  cube.cpp  cube.h  fft.h  globals.cpp  globals.h  gravityorbs.cpp  gravityorbs.h  index.html  lifx_controller.py  main.cpp  menu.cpp  menu.h  networking.cpp  networking.h  particle01.cpp  particle01.h  waveform.cpp  waveform.h
IdleGame/: IdleGame.cpp  IdleGame.h
Menu/: ColorPicker.cpp  ColorPicker.h  Debug.cpp  Debug.h  GetColorFromHue.cpp  GetColorFromHue.h  OrbControl.cpp  OrbControl.h  SliderControl.cpp  SliderControl.h
Menu/IdleGameMenu/: IdleGameMenu.cpp  IdleGameMenu.h
Networking/lifx/: lifx_controller.py
html/: Index.html  index.html  waveform_shader.fs
